fix image spacing issue

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -103,7 +103,7 @@
   padding-right: 30px;
 }
 
-#headshot-pic {
+#headshot-picture {
   width: 100%;
 }
 
