--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -46,7 +46,7 @@ body {
   position: absolute;
   top: -300px;
   left: 0;
-  width: 100%;
+  max-width: 100%;
   pointer-events: none;
 }
 
@@ -86,5 +86,12 @@ body {
   }
   100% {
     transform: translate(-0px, 0);
+  }
+}
+
+/* Use a media query to add a break point at 800px: */
+@media screen and (max-width: 800px) {
+  .hero {
+    height: 80vh;
   }
 }
